update sh for adc, dacapo